@@ -11,103 +11,128 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.servlet.resource.NoResourceFoundException;
 
+import java.time.Instant;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
-/**
- * Unified API exception handling.
- * - 409 CONFLICT for ActiveSessionConflictException, with continuation headers/body.
- * - 400 for illegal state/argument
- * - 404 for missing resource
- * (429 daily-limit handler 제거됨: 제한 폐지)
- */
 @RestControllerAdvice
 @RequiredArgsConstructor
 public class ApiExceptionHandler {
 
     private final QuizService quizService;
 
+    private static void putIfNotNull(Map<String, Object> map, String key, Object value) {
+        if (value != null) map.put(key, value);
+    }
+
+    private static String strOrEmpty(Object v) {
+        return v == null ? "" : String.valueOf(v);
+    }
+
     @ExceptionHandler(ActiveSessionConflictException.class)
     public ResponseEntity<Map<String, Object>> handleActiveSession(ActiveSessionConflictException e) {
         Long id = e.getSessionId();
-        var info = quizService.getContinuationInfo(id);
+
+        // 방어적으로 null 처리
+        var info = (id != null) ? quizService.getContinuationInfo(id) : null;
 
         HttpHeaders headers = new HttpHeaders();
-        headers.add("X-Active-Session-Id", String.valueOf(id));
-        headers.add("X-Session-Status", info.status());
-        headers.add("X-Session-Expires-At", info.expiresAt() != null ? info.expiresAt().toString() : "");
-        headers.add("X-Next-Item-Order", info.nextItemOrder() != null ? String.valueOf(info.nextItemOrder()) : "");
-        headers.add("X-Answered-Count", String.valueOf(info.answeredCount()));
-        headers.add("X-Total-Count", String.valueOf(info.total()));
-        headers.add("Location", "/api/quiz/sessions/" + id);
+        if (id != null) {
+            headers.add("X-Active-Session-Id", String.valueOf(id));
+            headers.add("Location", "/api/quiz/sessions/" + id);
+        }
+        if (info != null) {
+            headers.add("X-Session-Status", strOrEmpty(info.status()));
+            headers.add("X-Session-Expires-At", strOrEmpty(info.expiresAt()));
+            headers.add("X-Next-Item-Order", strOrEmpty(info.nextItemOrder()));
+            headers.add("X-Answered-Count", strOrEmpty(info.answeredCount()));
+            headers.add("X-Total-Count", strOrEmpty(info.total()));
+        }
 
-        Map<String, Object> body = Map.of(
-                "success", false,
-                "error", Map.of(
-                        "code", "SESSION_ALREADY_ACTIVE",
-                        "message", "An active quiz session already exists.",
-                        "session", Map.of(
-                                "id", info.sessionId(),
-                                "status", info.status(),
-                                "expiresAt", info.expiresAt(),
-                                "nextItemOrder", info.nextItemOrder(),
-                                "answeredCount", info.answeredCount(),
-                                "total", info.total()
-                        )
-                )
-        );
+        // body 생성 (null 안전)
+        Map<String, Object> session = new LinkedHashMap<>();
+        if (info != null) {
+            putIfNotNull(session, "id", info.sessionId());
+            putIfNotNull(session, "status", info.status());
+            putIfNotNull(session, "expiresAt", info.expiresAt());       // 직렬화는 Jackson이 처리
+            putIfNotNull(session, "nextItemOrder", info.nextItemOrder());
+            putIfNotNull(session, "answeredCount", info.answeredCount());
+            putIfNotNull(session, "total", info.total());
+        } else if (id != null) {
+            // 최소한의 정보만
+            session.put("id", id);
+        }
 
-        return new ResponseEntity<>(body, headers, HttpStatus.CONFLICT);
+        Map<String, Object> error = new LinkedHashMap<>();
+        error.put("code", "SESSION_ALREADY_ACTIVE");
+        error.put("message", "An active quiz session already exists.");
+        if (!session.isEmpty()) {
+            error.put("session", Collections.unmodifiableMap(session));
+        }
+
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("success", false);
+        body.put("timestamp", Instant.now().toString());
+        body.put("error", Collections.unmodifiableMap(error));
+
+        return new ResponseEntity<>(Collections.unmodifiableMap(body), headers, HttpStatus.CONFLICT);
     }
 
     @ExceptionHandler(IllegalStateException.class)
     public ResponseEntity<Map<String, Object>> handleIllegalState(IllegalStateException e) {
-        Map<String, Object> body = Map.of(
-                "success", false,
-                "error", Map.of(
-                        "code", e.getMessage() != null ? e.getMessage() : "ILLEGAL_STATE"
-                )
-        );
-        return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+        Map<String, Object> error = new LinkedHashMap<>();
+        error.put("code", e.getMessage() != null ? e.getMessage() : "ILLEGAL_STATE");
+
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("success", false);
+        body.put("error", Collections.unmodifiableMap(error));
+
+        return new ResponseEntity<>(Collections.unmodifiableMap(body), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
     public ResponseEntity<Map<String, Object>> handleIllegalArgument(IllegalArgumentException e) {
-        Map<String, Object> body = Map.of(
-                "success", false,
-                "error", Map.of(
-                        "code", e.getMessage() != null ? e.getMessage() : "BAD_REQUEST"
-                )
-        );
-        return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+        Map<String, Object> error = new LinkedHashMap<>();
+        error.put("code", e.getMessage() != null ? e.getMessage() : "BAD_REQUEST");
+
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("success", false);
+        body.put("error", Collections.unmodifiableMap(error));
+
+        return new ResponseEntity<>(Collections.unmodifiableMap(body), HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(NoResourceFoundException.class)
     public ResponseEntity<Map<String, Object>> handleNoResource(NoResourceFoundException e) {
-        Map<String, Object> body = Map.of(
-                "success", false,
-                "error", Map.of(
-                        "code", "NOT_FOUND",
-                        "message", e.getMessage()
-                )
-        );
-        return new ResponseEntity<>(body, HttpStatus.NOT_FOUND);
+        Map<String, Object> error = new LinkedHashMap<>();
+        error.put("code", "NOT_FOUND");
+        if (e.getMessage() != null) {
+            error.put("message", e.getMessage());
+        }
+
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("success", false);
+        body.put("error", Collections.unmodifiableMap(error));
+
+        return new ResponseEntity<>(Collections.unmodifiableMap(body), HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(SessionClosedException.class)
     public ResponseEntity<Map<String, Object>> handleSessionClosed(SessionClosedException e) {
-        // 이미 제출 완료된 세션이므로 계속 진행 불가. 새 세션을 유도.
         HttpHeaders headers = new HttpHeaders();
-        headers.add("X-Session-Id", String.valueOf(e.getSessionId()));
-        headers.add("X-Session-Status", e.getStatus());
+        if (e.getSessionId() != null) headers.add("X-Session-Id", String.valueOf(e.getSessionId()));
+        if (e.getStatus() != null) headers.add("X-Session-Status", e.getStatus());
         headers.add("Location", "/api/quiz/sessions"); // 새 세션 시작 위치 안내
 
-        Map<String, Object> body = Map.of(
-                "success", false,
-                "error", Map.of(
-                        "code", "SESSION_ALREADY_SUBMITTED",
-                        "message", "This quiz session is already submitted. Start a new session to continue."
-                )
-        );
-        return new ResponseEntity<>(body, headers, HttpStatus.CONFLICT);
+        Map<String, Object> error = new LinkedHashMap<>();
+        error.put("code", "SESSION_ALREADY_SUBMITTED");
+        error.put("message", "This quiz session is already submitted. Start a new session to continue.");
+
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("success", false);
+        body.put("error", Collections.unmodifiableMap(error));
+
+        return new ResponseEntity<>(Collections.unmodifiableMap(body), headers, HttpStatus.CONFLICT);
     }
 }
